--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 license = "MIT"
 
 [workspace.dependencies]
+bitflags = "2.9"
 futures = "0.3"
 lasercube-core = { version = "0.1.0", path = "crates/lasercube-core" }
 thiserror = "1"
